src/objects/geopointe__Geocode__c.object
<CustomObject>
    <description>A cache of geocode information used for mapping purposes.</description>
    <fields>
        <fullName>geopointe__Address_Id__c</fullName>
        <inlineHelpText>This is a legacy field no longer used by Geopointe.</inlineHelpText>
        <label>Address Id DEPRECATED</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__City__c</fullName>
        <inlineHelpText>The city value provided to the geocoder.</inlineHelpText>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__City_clean__c</fullName>
        <label>City (clean)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Country_ISO__c</fullName>
        <inlineHelpText>The 2 character ISO country value that corresponds to the country sent to the geocoder. This was determined using the Country Code mappings configured in your system.</inlineHelpText>
        <label>Country (ISO)</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Country__c</fullName>
        <inlineHelpText>The country value provided to the geocoder.</inlineHelpText>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Country_clean__c</fullName>
        <label>Country (clean)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__County_clean__c</fullName>
        <label>County (clean)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Description__c</fullName>
        <inlineHelpText>This field can be used by customers for any notes needed. This field has no functional significance in the application.</inlineHelpText>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>geopointe__Geocode_Quality_Code__c</fullName>
        <inlineHelpText>This is a legacy field no longer used by Geopointe.</inlineHelpText>
        <label>Geocode Quality Code DEPRECATED</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Geocode_Quality__c</fullName>
        <inlineHelpText>The precision of the geocoded location. Refer to the Geocoder help page for more information. http://help.geopointe.com/customer/portal/articles/1811022-the-geocoder</inlineHelpText>
        <label>Geocode Quality</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Geocode_Service__c</fullName>
        <inlineHelpText>This is a legacy field no longer used by Geopointe.</inlineHelpText>
        <label>Geocode Service DEPRECATED</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MapQuest</fullName>
                </value>
                <value>
                    <fullName>OpenStreetMap</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>geopointe__Latitude__c</fullName>
        <label>Latitude</label>
        <precision>14</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Latitude_display__c</fullName>
        <inlineHelpText>Used for displaying the location on a map</inlineHelpText>
        <label>Latitude (display)</label>
        <precision>14</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Latitude_search__c</fullName>
        <externalId>true</externalId>
        <label>Latitude (search)</label>
        <precision>14</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Link_ID__c</fullName>
        <inlineHelpText>This is a legacy field no longer used by Geopointe.</inlineHelpText>
        <label>Link ID DEPRECATED</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Longitude__c</fullName>
        <label>Longitude</label>
        <precision>14</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Longitude_display__c</fullName>
        <inlineHelpText>Used for displaying the location on a map</inlineHelpText>
        <label>Longitude (display)</label>
        <precision>14</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Longitude_search__c</fullName>
        <externalId>true</externalId>
        <label>Longitude (search)</label>
        <precision>14</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Map_Object__c</fullName>
        <inlineHelpText>Name (&quot;API Name&quot;) of map object.</inlineHelpText>
        <label>Map Object</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Parent_Object__c</fullName>
        <inlineHelpText>The object type of the parent record</inlineHelpText>
        <label>Parent Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Parent_Record_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <inlineHelpText>The 18-character record ID of the parent record to this geocode record.  There is a 1 to 1 relationship between the parent record and its geocode record.</inlineHelpText>
        <label>Parent Record ID DEPRECATED</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>geopointe__Parent_Record_Id2__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>The 18-character record ID of the parent record to this geocode record.</inlineHelpText>
        <label>Parent Record Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Parent_Record_Name__c</fullName>
        <inlineHelpText>The conversational name of the parent record (e.g. Account Name, Opportunity Name, Case Number, etc.)</inlineHelpText>
        <label>Parent Record Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Parent_Record__c</fullName>
        <formula>IF( ISBLANK( geopointe__Parent_Record_Id2__c ) , null, 
 HYPERLINK(&quot;/&quot; &amp;  geopointe__Parent_Record_Id2__c ,  geopointe__Parent_Record_Name__c , &quot;_top&quot;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>A link that takes you to the parent record.</inlineHelpText>
        <label>Parent Record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Postal_Code__c</fullName>
        <inlineHelpText>The postal code value provided to the geocoder.</inlineHelpText>
        <label>Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Postal_Code_clean__c</fullName>
        <label>Postal Code (clean)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Side_of_Street__c</fullName>
        <inlineHelpText>This is a legacy field no longer used by Geopointe.</inlineHelpText>
        <label>Side of Street DEPRECATED</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Left</fullName>
                </value>
                <value>
                    <fullName>Right</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>geopointe__State_Province__c</fullName>
        <inlineHelpText>The street/province value provided to the geocoder.</inlineHelpText>
        <label>State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__State_Province_clean__c</fullName>
        <label>State/Province (clean)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Street__c</fullName>
        <inlineHelpText>The street value provided to the geocoder.</inlineHelpText>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>geopointe__Street_clean__c</fullName>
        <label>Street (clean)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>geopointe__Uses_Customer_Geocodes__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked if this record uses geocodes provided by the customer.</inlineHelpText>
        <label>Uses Customer Geocodes</label>
        <type>Checkbox</type>
    </fields>
    <label>Geopointe Geocode</label>
    <listViews>
        <fullName>geopointe__All_Records</fullName>
        <columns>NAME</columns>
        <columns>geopointe__Parent_Object__c</columns>
        <columns>geopointe__Parent_Record__c</columns>
        <columns>geopointe__Street__c</columns>
        <columns>geopointe__City__c</columns>
        <columns>geopointe__State_Province__c</columns>
        <columns>geopointe__Postal_Code__c</columns>
        <columns>geopointe__Country__c</columns>
        <columns>geopointe__Geocode_Quality__c</columns>
        <columns>geopointe__Geocode_Quality_Code__c</columns>
        <columns>geopointe__Geocode_Service__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>geopointe__Updated_Today</fullName>
        <columns>NAME</columns>
        <columns>geopointe__Parent_Object__c</columns>
        <columns>geopointe__Parent_Record__c</columns>
        <columns>geopointe__Street__c</columns>
        <columns>geopointe__City__c</columns>
        <columns>geopointe__State_Province__c</columns>
        <columns>geopointe__Postal_Code__c</columns>
        <columns>geopointe__Country__c</columns>
        <columns>geopointe__Geocode_Quality__c</columns>
        <columns>geopointe__Geocode_Quality_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Updated Today</label>
    </listViews>
    <nameField>
        <displayFormat>GEO-{0000000}</displayFormat>
        <label>Record #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Geopointe Geocodes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>